--- a/Lab4/Compulsory/pom.xml
+++ b/Lab4/Compulsory/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>my-project</artifactId>
+    <artifactId>Compulsory4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -16,7 +16,7 @@
                 <version>3.11.0</version>
                 <configuration>
                     <source>1.8</source>
-                    <target>1.8</target>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
